# PDF2Pocketmod

./: README.md  pyproject.toml
my_cli_app/: __init__.py  cli.py
pdf2pocketmod/: __init__.py  cli.py
