[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2pocketmod"
version = "0.1.0"
description = "A simple command-line application"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Josu Antón"}
]
dependencies = [
    "click",
    "pymupdf>=1.24.11",
]

[project.scripts]
pdf2pocketmod = "pdf2pocketmod.cli:cli"

[tool.uv]
package = true
